# groundgrid

./: AGENTS.md  CMakeLists.txt  package.xml
include/groundgrid/: GroundGrid.h  GroundGridConfig.h  GroundSegmentation.h
src/: GroundGrid.cpp  GroundSegmentation.cpp  groundgrid_ros2_node.cpp
